Fixing line lengths